@@ -65,6 +65,9 @@ Bug Fixes
 * SOLR-6104: The 'addreplica' Collection API does not support 'async' parameter.
   (shalin)
 
+* SOLR-6101: Shard splitting doesn't work when legacyCloud=false is set in
+  cluster properties. (shalin)
+
 Other Changes
 ---------------------
 
